-fix query_count to support flexible filtering like everything else -ensure DataTable always escapes HTML in contents, and use whitespace: pre so that newlines can still be included (i.e. in JobTable)

--- a/frontend/client/src/autotest/public/afeclient.css
+++ b/frontend/client/src/autotest/public/afeclient.css
@@ -10,7 +10,7 @@ body {
 .data-table td {
   margin: 0;
   padding: 0.2em 0.4em;
-  white-space: nowrap;
+  white-space: pre;
   border-bottom: 1px solid #C0C0C0;
 }
 
